WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199800
[WPE][GTK] Improvements and fixes in FileSystemGlib.cpp
https://bugs.webkit.org/show_bug.cgi?id=199800
Summary
[WPE][GTK] Improvements and fixes in FileSystemGlib.cpp
Michael Catanzaro
Reported
2019-07-15 12:37:01 PDT
* Use nullptr * Fix GFileInfo leak in getFileSize * Use GRefPtr to clarify ownership of the GFileIOStream in openFile
Attachments
Patch
(5.53 KB, patch)
2019-07-15 13:00 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2019-07-15 13:00:28 PDT
Created
attachment 374137
[details]
Patch
Carlos Garcia Campos
Comment 2
2019-07-16 00:40:10 PDT
Comment on
attachment 374137
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374137&action=review
> Source/WTF/wtf/glib/FileSystemGlib.cpp:358 > - return ioStream; > + return ioStream.leakRef();
I don't see why this clarifies anything, but ok.
WebKit Commit Bot
Comment 3
2019-07-16 01:09:58 PDT
Comment on
attachment 374137
[details]
Patch Clearing flags on attachment: 374137 Committed
r247477
: <
https://trac.webkit.org/changeset/247477
>
WebKit Commit Bot
Comment 4
2019-07-16 01:09:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug