[WPE][GTK] Improvements and fixes in FileSystemGlib.cpp https://bugs.webkit.org/show_bug.cgi?id=199800

Reviewed by Carlos Garcia Campos.

Use nullptr.

Fix a GFileInfo leak in getFileSize.

Use GRefPtr to clarify ownership of the GFileIOStream in openFile.

* wtf/glib/FileSystemGlib.cpp:
(WTF::FileSystemImpl::getFileSize):
(WTF::FileSystemImpl::getVolumeFreeSpace):
(WTF::FileSystemImpl::openTemporaryFile):
(WTF::FileSystemImpl::openFile):
(WTF::FileSystemImpl::seekFile):
(WTF::FileSystemImpl::writeToFile):
(WTF::FileSystemImpl::readFromFile):


Canonical link: https://commits.webkit.org/213703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247477 268f45cc-cd09-0410-ab3c-d52691b4dbfc